@@ -1,5 +1,10 @@
 2006-01-22 Braden McDaniel  <braden@endoframe.com>
 
+	* mozilla-plugin/src/openvrml-player/gtkglviewer.cpp: Disambiguate
+	externally linked functions by prefixing with "gtk_gl_viewer_".
+
+2006-01-22 Braden McDaniel  <braden@endoframe.com>
+
 	* mozilla-plugin/src/openvrml-player/command_istream.cpp: Handle
 	EOF from the command_channel by inserting traits_type::eof() into
 	the stream buffer.
